--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.4" />
+        app:layout_constraintGuide_percent="0.37" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_poster"
@@ -57,6 +57,20 @@
         app:layout_constraintTop_toBottomOf="@id/txt_name" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Remove from watchlist"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        app:backgroundTint="@color/alice_blue"
+        app:cornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="@id/txt_name"
+        app:layout_constraintTop_toBottomOf="@id/txt_name" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_watch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,72 +80,77 @@
         android:textColor="@color/black"
         app:backgroundTint="@color/white"
         app:cornerRadius="10dp"
-        app:strokeColor="@color/black"
-        app:strokeWidth="1dp"
         app:layout_constraintStart_toStartOf="@id/txt_name"
-        app:layout_constraintTop_toBottomOf="@id/btn_add" />
+        app:layout_constraintTop_toBottomOf="@id/barrier"
+        app:strokeColor="@color/black"
+        app:strokeWidth="1dp" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="btn_add,btn_remove"/>
 
     <View
         android:id="@+id/divider1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/img_poster"
-        android:background="@color/alice_blue"
         android:layout_marginTop="10dp"
-        />
+        android:background="@color/alice_blue"
+        app:layout_constraintTop_toBottomOf="@id/img_poster" />
 
     <TextView
         android:id="@+id/txt_description_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Short description"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider1"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/divider1" />
 
     <TextView
         android:id="@+id/txt_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_description_title"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="This is description"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_description_title"
+        tools:text="This is description" />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/txt_description"
-        android:background="@color/alice_blue"
         android:layout_marginTop="10dp"
-        />
+        android:background="@color/alice_blue"
+        app:layout_constraintTop_toBottomOf="@id/txt_description" />
 
     <TextView
         android:id="@+id/txt_detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Detail"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider2"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/divider2" />
 
     <com.example.qstmovieapp.ui.custom.MovieInfoView
         android:id="@+id/miv_genre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:mif_label="Genre"
-        app:layout_constraintTop_toBottomOf="@id/txt_detail_title"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_detail_title"
+        app:mif_label="Genre" />
 
     <com.example.qstmovieapp.ui.custom.MovieInfoView
         android:id="@+id/miv_release_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:mif_label="Release date"
-        app:layout_constraintTop_toBottomOf="@id/miv_genre"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/miv_genre"
+        app:mif_label="Release date" />
 </androidx.constraintlayout.widget.ConstraintLayout>
