--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -63,7 +63,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
-        android:background="@color/black"
+        android:background="@color/alice_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_poster" />
