--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="20dp"
     android:paddingHorizontal="20dp">
 
     <androidx.constraintlayout.widget.Guideline
@@ -28,6 +29,9 @@
         android:id="@+id/txt_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        android:textStyle="bold"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintEnd_toStartOf="@id/txt_rating"
         app:layout_constraintStart_toEndOf="@id/gl"
@@ -48,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_add"
-        android:text="Add to watch list"
+        android:text="@string/add_to_watch_list"
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:backgroundTint="@color/alice_blue"
@@ -61,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Remove from watchlist"
+        android:text="@string/remove_from_watchlist"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:visibility="gone"
@@ -75,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Watch trailer"
+        android:text="@string/watch_trailer"
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:backgroundTint="@color/white"
@@ -105,7 +109,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Short description"
+        android:text="@string/movie_short_description"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider1" />
 
@@ -132,7 +139,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Detail"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:text="@string/movie_detail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider2" />
 
