--- a/app/src/main/res/layout/fragment_sort.xml
+++ b/app/src/main/res/layout/fragment_sort.xml
@@ -8,9 +8,9 @@
         android:id="@+id/txt_by_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:text="@string/sort_by_title"
         android:paddingVertical="10dp"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:textAlignment="center" />
 
     <View
@@ -23,9 +23,9 @@
         android:id="@+id/txt_by_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:paddingVertical="10dp"
-        android:text="Released Date"
+        android:text="@string/sort_by_released_date"
         android:textAlignment="center" />
 
     <View
@@ -38,8 +38,8 @@
         android:id="@+id/txt_cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:paddingVertical="10dp"
-        android:text="Cancel"
+        android:text="@string/cancel"
         android:textAlignment="center" />
 </LinearLayout>
