--- a/app/src/main/res/layout/view_movie_info.xml
+++ b/app/src/main/res/layout/view_movie_info.xml
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textAlignment="textEnd"
+        android:textStyle="bold"
         tools:text="genre"/>
 
     <TextView
